--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+
+# Eclipse Core
+.project
+
+# Eclipse Settings
+/.settings
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
