birthday still not working - but working again...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.h2.console.enabled=true
 
+# add "?serverTimzone=CET" for MySQL 5
+spring.datasource.url=jdbc:mysql://localhost:8080/soundmachine?serverTimezone=CET
+
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
