--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,26 @@
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+# Connection url for the database
+# add "?serverTimezone=GMT" for MySQL 5
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_hub?serverTimezone=GMT
+spring.datasource.username=skill_hub_app
+spring.datasource.password=djhf23872JGG=!
+
+# Show log for each sql query
+spring.jpa.show-sql=true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in the project
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
 spring.h2.console.enabled=true
 
-# add "?serverTimzone=CET" for MySQL 5
-spring.datasource.url=jdbc:mysql://localhost:8080/soundmachine?serverTimezone=CET
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
