--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Connection url for the database
 # add "?serverTimezone=GMT" for MySQL 5
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_hub?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_hub?serverTimezone=CET
 spring.datasource.username=skill_hub_app
 spring.datasource.password=djhf23872JGG=!
 
