Added admin user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+admin.password=$2y$12$O5C1qEBZyRTROYD1ILuOTuhWTDSecEyoxXeXDiTGp6x3mXFDce65u
+
 # Connection url for the database
 # add "?serverTimezone=GMT" for MySQL 5
 spring.datasource.url=jdbc:mysql://localhost:3306/skill_hub?serverTimezone=CET
