Fix exception Table 'skill_hub.user_skill' doesn't exist

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# Fixes the exception "java.sql.SQLSyntaxErrorException: Table 'skill_hub.user_skill' doesn't exist" 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 spring.h2.console.enabled=true
 
