--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=skill_hub_app
 spring.datasource.password=djhf23872JGG=!
 
 # Show log for each sql query
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in the project
