Fix DDL error during startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,17 @@ spring.datasource.password=djhf23872JGG=!
 # Show log for each sql query
 #spring.jpa.show-sql=true
 
+# Set logging level for Hibernate DDL statements
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
+
+
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in the project
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
-
-
-
 
 
 #spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
