--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.datasource.password=djhf23872JGG=!
 #spring.jpa.show-sql=true
 
 # Set logging level for Hibernate DDL statements
-logging.level.org.hibernate.tool.hbm2ddl=DEBUG
+#logging.level.org.hibernate.tool.hbm2ddl=debug
 
+# Set logging level for Hibernate DML statements
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in the project
@@ -21,6 +23,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
 
+# Allow lazy loading
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.username=sa
