--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,10 @@ spring.h2.console.enabled=true
 # Allow lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
+# Set upload file size
+spring.servlet.multipart.max-file-size=300KB
+spring.servlet.multipart.max-request-size=300KB
+
 #spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.username=sa
 #spring.datasource.password=
